add grpc-gateway and exercise

--- a/week-3/makefile
+++ b/week-3/makefile
@@ -1,7 +1,8 @@
 .SILENT:
 
 generate:
-	protoc -I proto/ proto/feedback.proto --go_out=plugins=grpc:proto
+	protoc -I proto/ --proto_path=$(HOME)/go/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis proto/feedback.proto --go_out=plugins=grpc:proto
+	protoc -I proto/ --proto_path=$(HOME)/go/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis --grpc-gateway_out=logtostderr=true:proto proto/feedback.proto
 	echo "Generate done"
 
 run-server:
